Use URI to assemble path